--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <script src="https://kit.fontawesome.com/18ff631df8.js" crossorigin="anonymous"></script>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<title>"Oh My Food"</title>
 </head>
 	
 <body class="container">
 	
+	<header>
+		
 <!-- Logo !-->
 	
 <nav>
 	<a href="#" id="logo">
 			    <img src="images/ohmyfood.png">
 	</a>
-	</nav>
+</nav>
 	
 <!-- Bannière lieu !-->
 	
@@ -29,13 +29,12 @@
 	
 <!-- Elements principaux !-->
 	
-<div class="principal_title">
-	<h4>Réservez le menu qui vous convient</h4>
-	</div>
-<div class="subtitle">
-	<h3>Découvrez des restaurants d'exception, sélectionnés par vos soins.</h3>
+<section class="principal_title">
+	<h1>Réservez le menu qui vous convient</h1>
+	</br>
+	<h2>Découvrez des restaurants d'exception, sélectionnés par vos soins.</h2>
 	</div>
 	
-
+<div
 	
 		
