--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <section class="principal_title">
 	<h1>Réservez le menu qui vous convient</h1>
 	</br>
-	<h2>Découvrez des restaurants d'exception, sélectionnés par vos soins.</h2>
+	<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
 	</div>
 	
-<div
-	
+	<button class="explore">Explorer nos restaurants</button>
+</section>	
 		
