--- a/index.html
+++ b/index.html
@@ -36,5 +36,27 @@
 	</div>
 	
 	<button class="explore">Explorer nos restaurants</button>
-</section>	
-		
+</section>
+
+<!-- Fonctionnement -->
+
+
+	<div class="explain">
+		<h1>Fonctionnement</h1>
+		<ul>
+			<li>
+				<p>1</p>
+				<i class="fa-solid fa-mobile-screen"></i>
+				<p>Choissisez un restaurant</p>
+			</li>
+			<li>
+				<p>2</p>
+				<i class="fa-solid fa-list-ul"></i>
+				<p>Composez votre menu</p>
+			</li>
+			<li>
+				<p>3</p>
+				<i class="fa-solid fa-store"></i>
+				<p>Dégustez au restaurant</p>
+			</li>
+	</div>
