--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/18ff631df8.js" crossorigin="anonymous"></script>
-	<title>"Oh My Food"</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>"Oh My Food"</title>
 </head>
   
   <body class="container">
