--- a/page2.html
+++ b/page2.html
@@ -36,11 +36,11 @@
     <form >
 	    <div class="title">
 	    	<h2>A la française</h2>
-		<i class="fa-regular fa-heart"></i>
+		<i class="far fa-heart"></i>
 	    </div>
 	    <div class="menu_1">
 		    <h2>ENTRÉES</h2>
-		    <i class="fa-regular fa-horizontal-rule"></i>
+		    <i class="far fa-horizontal-rule"></i>
 		    <div class="cards_menu">
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
