--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 </div>
 	
 <!-- Elements principaux !-->
+		
+<main>
 	
 <section class="principal_title">
 	<h1>Réservez le menu qui vous convient</h1>
