--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script src="https://kit.fontawesome.com/18ff631df8.js" crossorigin="anonymous"></script>
-	<title>"Oh My Food"</title>
+<script src="https://kit.fontawesome.com/18ff631df8.js" crossorigin="anonymous"></script>
+<title>"Oh My Food"</title>
 </head>
 	
 <body class="container">
@@ -16,16 +16,18 @@
 	
 <nav>
 	<a href="#" id="logo">
-			    <img src="images/ohmyfood.png">
+	<img src="images/ohmyfood.png">
 	</a>
 </nav>
 	
 <!-- Bannière lieu !-->
 	
 <div class="position">
-	<i class="fa-solid fa-location-dot"></i>
-	<p> Paris, Belleville </p>
+	<i class="fas fa-map-marker-alt"></i>
+	<input style="text" id="localisation" placeholder="Paris, Belleville">
 </div>
+		
+	</header>
 	
 <!-- Elements principaux !-->
 		
@@ -47,17 +49,17 @@
 		<ul>
 			<li>
 				<p>1</p>
-				<i class="fa-solid fa-mobile-screen"></i>
+				<i class="fas fa-mobile-alt"></i>
 				<p>Choissisez un restaurant</p>
 			</li>
 			<li>
 				<p>2</p>
-				<i class="fa-solid fa-list-ul"></i>
+				<i class="fas fa-list-ul"></i>
 				<p>Composez votre menu</p>
 			</li>
 			<li>
 				<p>3</p>
-				<i class="fa-solid fa-store"></i>
+				<i class="fas fa-store"></i>
 				<p>Dégustez au restaurant</p>
 			</li>
 		</ul>
@@ -74,26 +76,26 @@
 					<img src="images/palettedugout.jpg">
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
-					<i class="fa-regular fa-heart"></i>
+					<i class="far fa-heart"></i>
 				</a>
 				<a class="card_choice" href="#">
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
-					<i class="fa-regular fa-heart"></i>
+					<i class="far fa-heart"></i>
 				</a>
 				<a class="card_choice" href="#">
 					<img src="images/alafrancaise.jpg">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
-					<i class="fa-regular fa-heart"></i>
+					<i class="far fa-heart"></i>
 				</a>
 				<a class="card_choice" href="#">
 					<img src="images/delicedessens.jpg">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
-					<i class="fa-regular fa-heart"></i>
+					<i class="far fa-heart"></i>
 				</a>
 	</div>
 </section>
@@ -105,11 +107,11 @@
 		<h2>ohmyfood</h2>
 			<div class="propose">
 			<ul>
-				<li><a href="#" <i class="fa-solid fa-utensils"></i>
+				<li><a href="#" <i class="fas fa-utensils"></i>
 				<h3>Proposer un restaurant</h3>
 				</a>
 				</li>
-				<li><a href="#"<i class="fa-solid fa-handshake-angle"></i>
+				<li><a href="#" <i class="fas fa-hands-helping"></i>
 				<h3>Devenir partenaire</h3>
 				</a>
 				</li>
