--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
         <i class="far fa-arrow-left"></i>
    </a>
 	<a href="index.html"
-     <img src="images/ohmyfood.png" />
+     <img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
 	</a>
 </nav>
 	  
