--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
       
  <nav>
 	<a href="index.html" id="logo">
-        <i class="far fa-arrow-left"></i>
+        <i class="fas fa-arrow-left"></i>
    </a>
 	<a href="index.html"
      <img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
