--- a/page2.html
+++ b/page2.html
@@ -18,8 +18,7 @@
 	<a href="index.html" id="logo">
         <i class="fas fa-arrow-left"></i>
    </a>
-	<a href="index.html"
-     <img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
+	<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
 	</a>
 </nav>
 	  
