--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
 	    </div>
 	    <div class="menu_1">
 		    <h2>ENTRÉES</h2>
-		    <i class="fas fa-horizontal-rule"></i>
+		    <i class="far fa-horizontal-rule"></i>
 		    <div class="cards_menu">
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
