--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
  <nav>
 	<a href="index.html" id="logo">
         <i class="fas fa-arrow-left"></i>
-   </a>
+  	</a>
 	<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
 	</a>
 </nav>
@@ -33,7 +33,8 @@
 	    </div>
 	    <div class="menu_1">
 		    <h2>ENTRÉES</h2>
-		    <i class="fa fa-horizontal-rule"></i>
+		    </br>
+		    <i class="fas fa-horizontal-rule"></i>
 		    <div class="cards_menu">
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
