--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 	</br>
 	<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
 	</div>
-	
 	<button class="explore">Explorer nos restaurants</button>
 </section>
 
@@ -77,26 +76,26 @@
 					<img src="images/palettedugout.jpg">
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
-					<i class="far fa-heart"></i>
+					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
 				<a class="card_choice" href="#">
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
-					<i class="far fa-heart"></i>
+					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
 				<a class="card_choice" href="page2.html">
 					<img src="images/alafrancaise.jpg">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
-					<i class="far fa-heart"></i>
+					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
 				<a class="card_choice" href="#">
 					<img src="images/delicedessens.jpg">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
-					<i class="far fa-heart"></i>
+					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
 	</div>
 </section>
