--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
 					<img src="images/palettedugout.jpg">
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
-					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
+				<input style="checkbox" id="card_choice" placeholder="#" <i class="far fa-heart"></i>
 				<a class="card_choice" href="#">
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
-					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
+				<input style="checkbox" id="card_choice" placeholder="#" <i class="far fa-heart"></i>
 				<a class="card_choice" href="page2.html">
 					<img src="images/alafrancaise.jpg">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
-					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
-				</a>
+				</a>   
+				<input style="checkbox" id="card_choice" placeholder="#" <i class="far fa-heart"></i>
 				<a class="card_choice" href="#">
 					<img src="images/delicedessens.jpg">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
-					<input style="checkbox" id="heart" placeholder="<i class="far fa-heart"></i>"
 				</a>
+				<input style="checkbox" class="card_choice" placeholder="#" <i class="far fa-heart"></i>
 	</div>
 </section>
 			
