--- a/page2.html
+++ b/page2.html
@@ -61,16 +61,19 @@
 				  <h3>Coquilles Saint-Jacques"</h3>
 				  <p>Accompagnées d'une purée de panais</p>
 				  <p><strong>40€</strong></p>
+				   <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			  </div>
 			  <div class="cards_menu">
 				  <h3>Magret de canard</h3>
 				  <p>Et parmentier de pommes de terres</p>
 				  <p><strong>35€</strong></p>
+				   <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			  </div>
 			  <div class="cards_menu">
 				  <h3>Pigeonneau d'Ille-et-Vilaine</h3>
 				  <p>Sur son lit de gnocchis aux légumes</p>
 				  <p><strong>44€</strong></p>
+				   <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			  </div>
 		</div>
 
@@ -81,16 +84,19 @@
 				<h3>Pétales de violettes glacés</h3>
 				<p>Et purée de noisettes</p>
 				<p><strong>18€</strong></p>
+				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			</div>
 			<div class="cards_menu">
 				<h3>Fondant au chocolat</h3>
 				<p>Revisité</p>
 				<p><strong>22€</strong></p>
+				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			</div>
 			<div class="cards_menu">
 				<h3>Millefeuille croustillant</h3>
 				<p><strong>Myrtilles et pâte d'amandes</strong></p>
 				<p><strong>23€</strong></p>
+				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			</div>
 			<button class="command_btn">Commander</button>
 </form>
