--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
       
  <nav>
 	<a href="index.html" id="logo">
-        <i class="fas fa-arrow-left"></i>
+        <i class="fa fa-arrow-left"></i>
   	</a>
 	<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
 	</a>
@@ -33,7 +33,7 @@
 	    </div>
 	    <div class="entrees">
 		    <h2>ENTRÉES</h2>
-		    <i class="fas fa-horizontal-rule"></i>
+		    <i class="fa fa-horizontal-rule"></i>
 		    <div class="cards_menu">
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
@@ -56,7 +56,7 @@
 			    
 		  <div class="plats">
 			  <h2>PLATS</h2>
-			   <i class="fas fa-horizontal-rule"></i>
+			   <i class="fa fa-horizontal-rule"></i>
 			  <div class="cards_menu">
 				  <h3>Coquilles Saint-Jacques"</h3>
 				  <p>Accompagnées d'une purée de panais</p>
@@ -79,7 +79,7 @@
 
 		<div class="desserts">
 			<h2>DESSERTS</h2>
-			 <i class="fas fa-horizontal-rule"></i>
+			 <i class="fa fa-horizontal-rule"></i>
 			<div class="cards_menu">
 				<h3>Pétales de violettes glacés</h3>
 				<p>Et purée de noisettes</p>
