--- a/page2.html
+++ b/page2.html
@@ -22,14 +22,14 @@
 	</a>
 </nav>
 	  
-	 </header>
+	</header>
     
    <!-- Menu à la française !-->
     
     <form >
 	    <div class="title">
 	    	<h2>A la française</h2>
-		<i class="far fa-heart"></i>
+		 <input type="checkbox" id="like" <i class="far fa-heart"></i></i>
 	    </div>
 	    <div class="entrees">
 		    <h2>ENTRÉES</h2>
