--- a/index.html
+++ b/index.html
@@ -77,26 +77,26 @@
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
 				</a>
-				<input style="checkbox" id="card_choice" placeholder="#" <i class="far fa-heart"></i>
+				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
 				<a class="card_choice" href="#">
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
 				</a>
-				<input style="checkbox" id="card_choice" placeholder="#" <i class="far fa-heart"></i>
+				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
 				<a class="card_choice" href="page2.html">
 					<img src="images/alafrancaise.jpg">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
 				</a>   
-				<input style="checkbox" id="card_choice" placeholder="#" <i class="far fa-heart"></i>
+				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
 				<a class="card_choice" href="#">
 					<img src="images/delicedessens.jpg">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
 				</a>
-				<input style="checkbox" class="card_choice" placeholder="#" <i class="far fa-heart"></i>
+				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
 	</div>
 </section>
 			
