--- a/page2.html
+++ b/page2.html
@@ -98,6 +98,7 @@
 				<p><strong>23€</strong></p>
 				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
 			</div>
+		</div>
 			<button class="command_btn">Commander</button>
 </form>
 			  
