--- a/page3.html
+++ b/page3.html
@@ -34,6 +34,7 @@
   
     <div class="entrees">
       <h2>ENTRÉES</h2>
+	    <i class="fa fa-horizontal-rule"></i>
       <div class="cards_menu">
         <h3>Ravioles de foie gras</h3>
         <p>Accompagnées de leur crème à la truffe</p>
@@ -62,6 +63,7 @@
 
     <div class="plats">
       <h2>PLATS</h2>
+	    <i class="fa fa-horizontal-rule"></i>
       <div class="cards_menu">
         <h3>Noix de coquilles Saint-Jacques</h3>
         <p>Sur lit de purée de céleri-rave</p>
@@ -84,6 +86,7 @@
 
   <div class="desserts">
     <h2>DESSERTS</h2>
+	  <i class="fa fa-horizontal-rule"></i>
     <div class="cards_menu">
       <h3>Macaron noisette et chocolat</h3>
       <p>Glace au caramel brun et sel de Guérande</p>
