--- a/index.html
+++ b/index.html
@@ -44,26 +44,30 @@
 
 <!-- Fonctionnement -->
 
-	<div class="explain">
+	<section class="explain">
 		<h1>Fonctionnement</h1>
-		<ul>
-			<li>
-				<p>1</p>
+		<div class="number_btn">
+			<p>1</p>
+		</div>
+			<button>
 				<i class="fas fa-mobile-alt"></i>
 				<p>Choissisez un restaurant</p>
-			</li>
-			<li>
-				<p>2</p>
+			</button>	
+		<div class="number_btn">
+			<p>2</p>
+		</div>
+			<button>
 				<i class="fas fa-list-ul"></i>
 				<p>Composez votre menu</p>
-			</li>
-			<li>
+			</button>
+			<div class="number_btn">
 				<p>3</p>
-				<i class="fas fa-store"></i>
-				<p>Dégustez au restaurant</p>
-			</li>
-		</ul>
-	</div>
+			</div>
+			<button>
+			<i class="fas fa-store"></i>
+			<p>Dégustez au restaurant</p>
+			</button>
+	</section>
 	
 <!-- Restaurants !-->
 	
