--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 		
 <main>
 	
-<section class="principal_title">
+<form class="principal_title">
 	<h1>Réservez le menu qui vous convient</h1>
 	</br>
 	<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
 	</div>
 	<button class="explore">Explorer nos restaurants</button>
-</section>
+</form>
 
 <!-- Fonctionnement -->
 
