--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
 	<div id="choice_cards">
 		<h1>Restaurants<h1>
 			<div class="cards_choice_all">
-				<a class="card_choice" href="#">
+				<a class="card_choice" href="index_menu1.html">
 					<p class="new">Nouveau</p>
 					<img src="images/palettedugout.jpg">
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
 				</a>
 				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
-				<a class="card_choice" href="#">
+				<a class="card_choice" href="index_menu2.html">
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
 				</a>
 				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
-				<a class="card_choice" href="page2.html">
+				<a class="card_choice" href="index_menu3.html">
 					<img src="images/alafrancaise.jpg">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
 				</a>   
 				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
-				<a class="card_choice" href="#">
+				<a class="card_choice" href="index_menu4.html">
 					<img src="images/delicedessens.jpg">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
