--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 <!-- Logo !-->
 	
 <nav>
-	<a href="#" id="logo">
-	<img src="images/ohmyfood.png">
-	</a>
+	<a href="#" id="logo" <img src="images/ohmyfood.png" alt="logo Oh My Food></a>
 </nav>
 	
 <!-- Bannière lieu !-->
@@ -41,37 +39,32 @@
 <main>
 	
 <form class="principal_title">
-	<h1>Réservez le menu qui vous convient</h1>
-	</br>
+	<h2>Réservez le menu qui vous convient</h2>
 	<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
-	</div>
 	<button class="explore">Explorer nos restaurants</button>
 </form>
 
 <!-- Fonctionnement -->
 
 	<section class="explain">
-		<h1>Fonctionnement</h1>
+		<h2>Fonctionnement</h2>
 		<div class="number_btn">
 			<p>1</p>
 		</div>
-			<button>
-				<i class="fas fa-mobile-alt"></i>
-				<p>Choissisez un restaurant</p>
+			<button class="btn"><i class="fas fa-mobile-alt"></i>
+				Choissisez un restaurant
 			</button>	
 		<div class="number_btn">
 			<p>2</p>
 		</div>
-			<button>
-				<i class="fas fa-list-ul"></i>
-				<p>Composez votre menu</p>
+			<button class="btn"><i class="fas fa-list-ul"></i>
+				Composez votre menu
 			</button>
 			<div class="number_btn">
 				<p>3</p>
 			</div>
-			<button>
-			<i class="fas fa-store"></i>
-			<p>Dégustez au restaurant</p>
+			<button class="btn"><i class="fas fa-store"></i>
+				Dégustez au restaurant
 			</button>
 	</section>
 	
@@ -79,34 +72,35 @@
 	
 <section class="section_1">
 	<div id="choice_cards">
-		<h1>Restaurants<h1>
+		<h2>Restaurants</h2>
 			<div class="cards_choice_all">
 				<a class="card_choice" href="index_menu1.html">
 					<p class="new">Nouveau</p>
-					<img src="images/palettedugout.jpg">
+					<img src="images/palettedugout.jpg" alt="photo d'un plat">
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
 				</a>
-				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
+				<input type="checkbox" class="like" i class="far fa-heart"></i>
 				<a class="card_choice" href="index_menu2.html">
 					<p class="new">Nouveau</p>
-					<img src="images/noteenchantee.jpg">
+					<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
 				</a>
-				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
+				<input type="checkbox" class="like" i class="far fa-heart"></i>
 				<a class="card_choice" href="index_menu3.html">
-					<img src="images/alafrancaise.jpg">
+					<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
 				</a>   
-				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
+				<input type="checkbox" class="like" i class="far fa-heart"></i>
 				<a class="card_choice" href="index_menu4.html">
-					<img src="images/delicedessens.jpg">
+					<img src="images/delicedessens.jpg" alt="photo d'un plat">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
 				</a>
-				<input type="checkbox" id="like" <i class="far fa-heart"></i></i>
+				<input type="checkbox" class="like" i class="far fa-heart"></i>
+			</div>
 	</div>
 </section>
 			
@@ -117,19 +111,27 @@
 		<h2>ohmyfood</h2>
 			<div class="propose">
 				<ul>
-					<li><a href="#" <i class="fas fa-utensils"></i>
-					<h3>Proposer un restaurant</h3>
-					</a>
+					<li>
+						<a href="#" class="propose_resto">
+						<i class="fas fa-utensils"></i>
+						<h3>Proposer un restaurant</h3>
+						</a>
 					</li>
-					<li><a href="#" <i class="fas fa-hands-helping"></i>
-					<h3>Devenir partenaire</h3>
-					</a>
+					<li>
+						<a href="#" class="partenaire">
+						 <i class="fas fa-hands-helping"></i>
+						<h3>Devenir partenaire</h3>
+						</a>
 					</li>
-					<li><a href="#" <h3>Mentions légales</h3>	
-					</a>
+					<li>
+						<a href="#" class="legale_mentions">
+							<h3>Mentions légales</h3>	
+						</a>
 					</li>
-					<li><a href="#" <h3>Contact</h3>
-					</a>
+					<li>
+						<a href="#" class="contact">
+							<h3>Contact</h3>
+						</a>
 					</li>
 				</ul>
 			</div>
