--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	
 <div class="position">
 	<i class="fas fa-map-marker-alt"></i>
+	<label for="position">Paris, Belleville>
 	<input style="text" id="localisation" placeholder="Paris, Belleville">
 </div>
 		
