--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <!-- Logo !-->
 	
 <nav>
-	<a href="#" id="logo" <img src="images/ohmyfood.png" alt="logo Oh My Food></a>
+	<a href="#" id="logo">
+		<img src="images/ohmyfood.png" alt="logo Oh My Food">
+	</a>
 </nav>
 	
 <!-- Bannière lieu !-->
