--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 <div class="position">
 	<i class="fas fa-map-marker-alt"></i>
-	<label for="position">Paris, Belleville>
+	<label for="localisation">Paris, Belleville></label>
 	<input style="text" id="localisation" placeholder="Paris, Belleville">
 </div>
 		
@@ -83,26 +83,30 @@
 					<p>La palette du goût</p>
 					<p>Ménilmontant</p>
 				</a>
-				<input type="checkbox" class="like" i class="far fa-heart"></i>
+				<input type="checkbox" class="like"> 
+				<i class="far fa-heart"></i>
 				<a class="card_choice" href="index_menu2.html">
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 					<p>La note enchantée</p>
 					<p>Charonne</p>
 				</a>
-				<input type="checkbox" class="like" i class="far fa-heart"></i>
+				<input type="checkbox" class="like"> 
+				<i class="far fa-heart"></i>
 				<a class="card_choice" href="index_menu3.html">
 					<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 					<p>A la française</p>
 					<p>Cité Rouge</p>
 				</a>   
-				<input type="checkbox" class="like" i class="far fa-heart"></i>
+				<input type="checkbox" class="like"> 
+				<i class="far fa-heart"></i>
 				<a class="card_choice" href="index_menu4.html">
 					<img src="images/delicedessens.jpg" alt="photo d'un plat">
 					<p>Le délice des sens</p>
 					<p>Folie-Méricourt</p>
 				</a>
-				<input type="checkbox" class="like" i class="far fa-heart"></i>
+				<input type="checkbox" class="like"> 
+				<i class="far fa-heart"></i>
 			</div>
 	</div>
 </section>
