--- a/index_menu1.html
+++ b/index_menu1.html
@@ -41,19 +41,19 @@
           <h3>Fricassée d'escargots</h3>
           <p>Au piment d'espelette</p>
           <p><strong>25€</strong></p>
-          <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+          <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
     </div>
     <div class="cards_menu">
       <h3>Foie gras de canard mi-cuit</h3>
       <p>Et ses copeaux de truffe noire</p>
       <p><strong>35€</strong></p>
-      <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
     </div>
     <div class="cards_menu">
       <h3>Oeuf au plat</h3>
       <p>Assaisonné à la truffe sur lit de...</p>
       <p><strong>20€</strong></p>
-      <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
     </div>
     </div>
 
@@ -65,19 +65,19 @@
 		  <h3>Filet de boeuf aux herbes</h3>
 		  <p>Accompagné de sa ribambelle de légu...</p>
 		  <p><strong>44€</strong></p>
-		  <input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
+		  <input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 		</div>
           <div class="cards_menu">
             <h3>Parmentier de queue de boeuf</h3>
             <p>A la truffe noire et sa purée de panais</p>
             <p><strong>35€</strong></p>
-            <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+            <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
           </div>
           <div class="cards_menu">
             <h3>Filet de Turbot</h3>
             <p>Aux agrumes</p>
             <p><strong>44€</strong></p>
-            <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+            <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
           </div>
          </div>
 
@@ -88,19 +88,19 @@
             <h3>Paris-Brest</h3>
             <p>Revisité</p>
             <p><strong>18€</strong></p>
-            <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+            <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
           </div>
           <div class="cards_menu">
             <h3>Macaron au chocolat d'exception</h3>
             <p>Et glace à la vanille de Madagascar</p>
             <p><strong>22€</strong></p>
-            <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+            <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
           </div>
           <div class="cards_menu">
             <h3>Mousse au chocolat</h3>
             <p>Au piment d'espelette et à la truffe noire</p>
             <p><strong>23€</strong></p>
-            <input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
+            <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
           </div>
        </div>
     <button class="command_btn">Commander</button>
