--- a/index_menu3.html
+++ b/index_menu3.html
@@ -41,19 +41,25 @@
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
 			    <p><strong>25€</strong></p>
-			  <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+			    <label for="checkbox">
+			 	<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+			    </label>
 	    	    </div>
 	    		<div class="cards_menu">
 			<h3>Velouté de légumes d'antan</h3>
 			<p>Carotte, panais, topinambour</p>
 			<p><strong>35€</strong></p>
-			<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+			<label for="checkbox">
+				<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+			</label>
 	    	</div>
 	    	<div class="cards_menu">
 			<h3>Soupe à l'oignon</h3>
 			<p>Revisitée</p>
 			<p><strong>20€</strong></p>
-			<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+			<label for="checkbox">
+				<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+			</label>
 		</div>
 		</div>
 			    
@@ -65,21 +71,24 @@
 				  <h3>Coquilles Saint-Jacques"</h3>
 				  <p>Accompagnées d'une purée de panais</p>
 				  <p><strong>40€</strong></p>
-				   <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				  <label for="checkbox">
+				  	<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				  </label>
 			  </div>
 			  <div class="cards_menu">
 				  <h3>Magret de canard</h3>
 				  <p>Et parmentier de pommes de terres</p>
 				  <p><strong>35€</strong></p>
-				   <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				  <label for="checkbox">
+				   	<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				  </label>
 			  </div>
 			  <div class="cards_menu">
 				  <h3>Pigeonneau d'Ille-et-Vilaine</h3>
 				  <p>Sur son lit de gnocchis aux légumes</p>
 				  <p><strong>44€</strong></p>
-				  <input type="checkbox" class="checkbox">
 				  <label for="far fa-check-circle">
-					  <i class="far fa-check-circle"></i>
+				  	<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				  </label>
 			  </div>
 		</div>
@@ -91,19 +100,25 @@
 				<h3>Pétales de violettes glacés</h3>
 				<p>Et purée de noisettes</p>
 				<p><strong>18€</strong></p>
-				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+				<label for="checkbox">
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 			<div class="cards_menu">
 				<h3>Fondant au chocolat</h3>
 				<p>Revisité</p>
 				<p><strong>22€</strong></p>
-				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+				<label for="checkbox">
+				 	<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 			<div class="cards_menu">
 				<h3>Millefeuille croustillant</h3>
 				<p><strong>Myrtilles et pâte d'amandes</strong></p>
 				<p><strong>23€</strong></p>
-				 <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+				<label for="checkbox">
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 		</div>
 			<button class="command_btn">Commander</button>
@@ -116,18 +131,25 @@
 		<h2>ohmyfood</h2>
 			<div class="propose">
 				<ul>
-					<li><a href="#" <i class="fas fa-utensils"></i>
-					<h3>Proposer un restaurant</h3>
-					</a>
+					<li><a href="#" class="propose_resto">
+						<i class="fas fa-utensils"></i>
+						<h3>Proposer un restaurant</h3>
+						</a>
 					</li>
-					<li><a href="#" <i class="fas fa-hands-helping"></i>
-					<h3>Devenir partenaire</h3>
-					</a>
+					<li>
+						<a href="#" class="partenaire">
+						 <i class="fas fa-hands-helping"></i>
+						<h3>Devenir partenaire</h3>
+						</a>
 					</li>
-					<li><a href="#" <h3>Mentions légales</h3>	
-					</a>
+					<li>
+						<a href="#" class="legale_mentions">
+							<h3>Mentions légales</h3>	
+						</a>
 					</li>
-					<li><a href="#" <h3>Contact</h3>
+					<li>
+						<a href="#" class="contact">
+							<h3>Contact</h3>
 					</a>
 					</li>
 				</ul>
