--- a/index_menu3.html
+++ b/index_menu3.html
@@ -31,18 +31,18 @@
     <form >
 	    <div class="title">
 	    	<h2>A la française</h2>
-		 <i class="far fa-heart"></i></i>
+		 <i class="far fa-heart"></i>
 	    </div>
 	    <div class="entrees">
 		    <h2>ENTRÉES</h2>
-		    <i class="fa fa-horizontal-rule"></i>
+		    <i class="fa fa-horizontal-rule">
 		   
 		    <div class="cards_menu">
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
 			    <p><strong>25€</strong></p>
 			    <label for="checkbox">
-			 	<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+			 	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 			    </label>
 	    	    </div>
 	    		<div class="cards_menu">
@@ -50,7 +50,7 @@
 			<p>Carotte, panais, topinambour</p>
 			<p><strong>35€</strong></p>
 			<label for="checkbox">
-				<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 			</label>
 	    	</div>
 	    	<div class="cards_menu">
@@ -58,7 +58,7 @@
 			<p>Revisitée</p>
 			<p><strong>20€</strong></p>
 			<label for="checkbox">
-				<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				<input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
 			</label>
 		</div>
 		</div>
@@ -72,7 +72,7 @@
 				  <p>Accompagnées d'une purée de panais</p>
 				  <p><strong>40€</strong></p>
 				  <label for="checkbox">
-				  	<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				  	<input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
 				  </label>
 			  </div>
 			  <div class="cards_menu">
@@ -80,7 +80,7 @@
 				  <p>Et parmentier de pommes de terres</p>
 				  <p><strong>35€</strong></p>
 				  <label for="checkbox">
-				   	<input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+				   	<input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
 				  </label>
 			  </div>
 			  <div class="cards_menu">
@@ -88,7 +88,7 @@
 				  <p>Sur son lit de gnocchis aux légumes</p>
 				  <p><strong>44€</strong></p>
 				  <label for="far fa-check-circle">
-				  	<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				  	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 				  </label>
 			  </div>
 		</div>
@@ -101,7 +101,7 @@
 				<p>Et purée de noisettes</p>
 				<p><strong>18€</strong></p>
 				<label for="checkbox">
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+					<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 			<div class="cards_menu">
@@ -109,7 +109,7 @@
 				<p>Revisité</p>
 				<p><strong>22€</strong></p>
 				<label for="checkbox">
-				 	<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				 	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 			<div class="cards_menu">
@@ -117,7 +117,7 @@
 				<p><strong>Myrtilles et pâte d'amandes</strong></p>
 				<p><strong>23€</strong></p>
 				<label for="checkbox">
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+					<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 		</div>
