--- a/index_menu3.html
+++ b/index_menu3.html
@@ -35,15 +35,17 @@
 	    </div>
 	    <div class="entrees">
 		    <h2>ENTRÉES</h2>
-		    <i class="fa fa-horizontal-rule">
+		    <i class="fa fa-horizontal-rule"></i>
 		   
 		    <div class="cards_menu">
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
 			    <p><strong>25€</strong></p>
+			    <div class="check_circle_1">
 			    <label for="checkbox">
 			 	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
 			    </label>
+			    </div>
 	    	    </div>
 	    		<div class="cards_menu">
 			<h3>Velouté de légumes d'antan</h3>
