--- a/index_menu3.html
+++ b/index_menu3.html
@@ -41,27 +41,31 @@
 			    <h3>Tartare de poulpe acidulé</h3>
 			    <p>Aux zestes d'orange</p>
 			    <p><strong>25€</strong></p>
-			    <div class="check_circle_1">
-			    <label for="checkbox">
-			 	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-			    </label>
+			    <div class="check_circle">
+			   	 <label for="checkbox_1">
+			 	<input type="checkbox" id="checkbox_1"><i class="far fa-check-circle"></i>
+			   	 </label>
 			    </div>
 	    	    </div>
 	    		<div class="cards_menu">
 			<h3>Velouté de légumes d'antan</h3>
 			<p>Carotte, panais, topinambour</p>
 			<p><strong>35€</strong></p>
-			<label for="checkbox">
-				<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-			</label>
+				<div class="chech_circle">
+					<label for="checkbox_2">
+					<input type="checkbox" id="checkbox-2"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 	    	</div>
 	    	<div class="cards_menu">
 			<h3>Soupe à l'oignon</h3>
 			<p>Revisitée</p>
 			<p><strong>20€</strong></p>
-			<label for="checkbox">
-				<input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
-			</label>
+			<div class="check_circle">
+				<label for="checkbox_3">
+				<input type="checkbox" id="checkbox_3"> <i class="far fa-check-circle"></i>
+				</label>
+			</div>
 		</div>
 		</div>
 			    
@@ -73,54 +77,67 @@
 				  <h3>Coquilles Saint-Jacques"</h3>
 				  <p>Accompagnées d'une purée de panais</p>
 				  <p><strong>40€</strong></p>
-				  <label for="checkbox">
-				  	<input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
-				  </label>
+				  <div class="checkcircle">
+					 <label for="checkbox_4">
+				  	<input type="checkbox" id="checkbox_4"> <i class="far fa-check-circle"></i>
+				 	 </label>
+				  </div>
 			  </div>
 			  <div class="cards_menu">
 				  <h3>Magret de canard</h3>
 				  <p>Et parmentier de pommes de terres</p>
 				  <p><strong>35€</strong></p>
-				  <label for="checkbox">
-				   	<input type="checkbox" id="checkbox"> <i class="far fa-check-circle"></i>
-				  </label>
+				  <div class="check_circle">
+				  	<label for="checkbox_5">
+				   	<input type="checkbox" id="checkbox_5"> <i class="far fa-check-circle"></i>
+				  	</label>
+				  </div>
 			  </div>
 			  <div class="cards_menu">
 				  <h3>Pigeonneau d'Ille-et-Vilaine</h3>
 				  <p>Sur son lit de gnocchis aux légumes</p>
 				  <p><strong>44€</strong></p>
-				  <label for="far fa-check-circle">
-				  	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-				  </label>
+				  <div class="check_circle">
+				  	<label for="checkbox_6">
+					<input type="checkbox" id="checkbox_6"><i class="far fa-check-circle"></i>
+				  	</label>
+				  </div>
 			  </div>
 		</div>
 
 		<div class="desserts">
 			<h2>DESSERTS</h2>
 			 <i class="fa fa-horizontal-rule"></i>
+			
 			<div class="cards_menu">
 				<h3>Pétales de violettes glacés</h3>
 				<p>Et purée de noisettes</p>
 				<p><strong>18€</strong></p>
-				<label for="checkbox">
-					<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="check_circle">
+					<label for="checkbox_7">
+					<input type="checkbox" id="checkbox_7"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 			</div>
 			<div class="cards_menu">
 				<h3>Fondant au chocolat</h3>
 				<p>Revisité</p>
 				<p><strong>22€</strong></p>
-				<label for="checkbox">
-				 	<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="check_circle">
+					<label for="checkbox_8">
+				 	<input type="checkbox" id="checkbox_8"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 			</div>
 			<div class="cards_menu">
 				<h3>Millefeuille croustillant</h3>
 				<p><strong>Myrtilles et pâte d'amandes</strong></p>
 				<p><strong>23€</strong></p>
-				<label for="checkbox">
-					<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="check_circle">
+					<label for="checkbox_9">
+					<input type="checkbox" id="checkbox_9"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 			</div>
 		</div>
 			<button class="command_btn">Commander</button>
