--- a/index_menu3.html
+++ b/index_menu3.html
@@ -53,7 +53,7 @@
 			<p><strong>35€</strong></p>
 				<div class="chech_circle">
 					<label for="checkbox_2">
-					<input type="checkbox" id="checkbox-2"><i class="far fa-check-circle"></i>
+					<input type="checkbox" id="checkbox_2"><i class="far fa-check-circle"></i>
 					</label>
 				</div>
 	    	</div>
