--- a/index_menu2.html
+++ b/index_menu2.html
@@ -42,25 +42,41 @@
         <h3>Ravioles de foie gras</h3>
         <p>Accompagnées de leur crème à la truffe</p>
         <p><strong>25€</strong></p>
-        <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+       		 <div class="chech_circle">
+			<label for="checkbox_1">
+			<input type="checkbox" id="checkbox_1"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
       </div>
       <div class="cards_menu">
         <h3>Caviar osciètre</h3>
         <p>Sur blini à la farine de blé noir</p>
         <p><strong>35€</strong></p>
-        <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+        	<div class="chech_circle">
+			<label for="checkbox_2">
+			<input type="checkbox" id="checkbox_2"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
       </div>
       <div class="cards_menu">
         <h3>Homard et espuma de...</h3>
         <p>Mariné aux zests d'orange</p>
         <p><strong>20€</strong></p>
-        <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+        	<div class="chech_circle">
+			<label for="checkbox_3">
+			<input type="checkbox" id="checkbox_3"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
       </div>
       <div class="cards_menu">
         <h3>Foie gras de canard cuit entier</h3>
         <p>Confiture de figue et pain toasté</p>
         <p><strong>35€</strong></p>
-        <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+      		 <div class="chech_circle">
+			<label for="checkbox_4">
+			<input type="checkbox" id="checkbox_4"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
       </div>
     </div>
 
@@ -72,19 +88,31 @@
         <h3>Noix de coquilles Saint-Jacques</h3>
         <p>Sur lit de purée de céleri-rave</p>
         <p><strong>40€</strong></p>
-        <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+     		 <div class="chech_circle">
+			<label for="checkbox_5">
+			<input type="checkbox" id="checkbox_5"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
     </div>
     <div class="cards_menu">
       <h3>Langoustine poêlée</h3>
       <p>Purée de patate douce</p>
       <p><strong>35€</strong></p>
-      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+    	 <div class="chech_circle">
+			<label for="checkbox_6">
+			<input type="checkbox" id="checkbox_6"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
     </div>
     <div class="cards_menu">
       <h3>Mijoté de queue de boeuf</h3>
       <p>Et riz sauvage aux zests de citron</p>
       <p><strong>44€</strong></p>
-      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+     		<div class="chech_circle">
+			<label for="checkbox_7">
+			<input type="checkbox" id="checkbox_7"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
     </div>
   </div>
 
@@ -95,19 +123,31 @@
       <h3>Macaron noisette et chocolat</h3>
       <p>Glace au caramel brun et sel de Guérande</p>
       <p><strong>18€</strong></p>
-      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+     		 <div class="chech_circle">
+			<label for="checkbox_8">
+			<input type="checkbox" id="checkbox_8"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
     </div>
     <div class="cards_menu">
       <h3>Baba au rhum revisité</h3>
       <p>Avec son coulis de citron</p>
       <p><strong>22€</strong></p>
-      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+      		<div class="chech_circle">
+			<label for="checkbox_10">
+			<input type="checkbox" id="checkbox_10"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
     </div>
     <div class="cards_menu">
       <h3>Tarte au citron meringuée</h3>
       <p>Destructurée</p>
       <p><strong>23€</strong></p>
-      <input type="checkbox" class="checkbox"> <i class="far fa-check-circle"></i>
+     	 <div class="chech_circle">
+			<label for="checkbox_11">
+			<input type="checkbox" id="checkbox_11"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
     </div>
    </div>
   <button class="command_btn">Commander</button>
