--- a/index_menu4.html
+++ b/index_menu4.html
@@ -31,7 +31,7 @@
    <form>
      <div class="title">
        <h2>Le délice des sens</h2>
-       <input type="checkbox" id="like" <i class="far fa-heart"></i></i>
+       <input type="checkbox" id="like" <i class="far fa-heart"></i>
     </div>
     <div class="entrees">
       <h2>ENTREES</h2>
@@ -41,19 +41,31 @@
       <h3>Tartare de thon</h3>
       <p>Assaisonné au yuzu</p>
       <p></strong>25€</strong></p>
-      <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+     		 <div class="chech_circle">
+			<label for="checkbox_1">
+			<input type="checkbox" id="checkbox_1"><i class="far fa-check-circle"></i>
+			</label>
+		</div>
 		</div>
 		<div class="cards_menu">
 		  <h3>Bouchée de homard croustillant</h3>
 		  <p>Et sa farandole de petits légumes</p>
 		  <p><strong>35€</strong></p>
-		  <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+		 	<div class="chech_circle">
+				<label for="checkbox_2">
+				<input type="checkbox" id="checkbox_2"><i class="far fa-check-circle"></i>
+				</label>
+			</div>
 		</div>
 		<div class="cards_menu">
 		  <h3>Velouté de cèpes</h3>
 		  <p>Aux truffes</p>
 		  <p><strong>20€</strong></p>
-		  <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+			<div class="chech_circle">
+				<label for="checkbox_3">
+				<input type="checkbox" id="checkbox_3"><i class="far fa-check-circle"></i>
+				</label>
+			</div>
 		</div>
 		</div>
 
@@ -64,19 +76,31 @@
 				<h3>Poulet rôti aux herbes de Provence</h3>
 				<p>Et sa crème de truffe</p>
 				<p><strong>40€</strong></p>
-				<input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+					<div class="chech_circle">
+						<label for="checkbox_4">
+						<input type="checkbox" id="checkbox_4"><i class="far fa-check-circle"></i>
+						</label>
+					</div>
 		</div>
 		<div class="cards_menu">
 			<h3>Langouste rôtie</h3>
 			<p>Et ses légumes de saison</p>
 			<p><strong>35€</strong></p>
-			<input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+				<div class="chech_circle">
+					<label for="checkbox_5">
+					<input type="checkbox" id="checkbox_5"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 		</div>
 		    <div class="cards_menu">
 			    <h3>Côte de boeuf angus</h3>
 			    <p>Et sa purée de panais</p>
 			    <p><strong>44€</strong></p>
-			    <input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+			 	  <div class="chech_circle">
+					<label for="checkbox_6">
+					<input type="checkbox" id="checkbox_6"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 		</div>
 		</div>
 
@@ -87,19 +111,31 @@
 				<h3>Farandole de desserts</h3>
 				<p>Du chef</p>
 				<p><strong>18€</strong></p>
-				<input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+					<div class="chech_circle">
+						<label for="checkbox_7">
+						<input type="checkbox" id="checkbox_7"><i class="far fa-check-circle"></i>
+						</label>
+					</div>
 		</div>
 		<div class="cards_menu">
 			<h3>Crème brûlée</h3>
 			<p>Revisitée</p>
 			<p><strong>22€</strong></p>
-			<input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+				<div class="chech_circle">
+					<label for="checkbox_8">
+					<input type="checkbox" id="checkbox_8"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 		</div>
 		<div class="cards_menu">
 			<h3>Tiramisu</h3>
 			<p>A la noisette</p>
 			<p><strong>23€</strong></p<>
-				<input type="checkbox" id="checkbox" <i class="far fa-check-circle"></i>
+				<div class="chech_circle">
+					<label for="checkbox_9">
+					<input type="checkbox" id="checkbox_9"><i class="far fa-check-circle"></i>
+					</label>
+				</div>
 		</div>
 		</div>
   	 <button class="command_btn">Commander</button>
