--- a/index_menu4.html
+++ b/index_menu4.html
@@ -30,8 +30,8 @@
     
    <form>
      <div class="title">
-       <h2>Le délice des sens</h2>
-       <input type="checkbox" id="like" <i class="far fa-heart"></i>
+      <h2>Le délice des sens</h2>
+      <i class="far fa-heart"></i>
     </div>
     <div class="entrees">
       <h2>ENTREES</h2>
@@ -40,13 +40,13 @@
     <div class="cards_menu">
       <h3>Tartare de thon</h3>
       <p>Assaisonné au yuzu</p>
-      <p></strong>25€</strong></p>
+      <p><strong>25€</strong></p>
      		 <div class="chech_circle">
 			<label for="checkbox_1">
 			<input type="checkbox" id="checkbox_1"><i class="far fa-check-circle"></i>
 			</label>
 		</div>
-		</div>
+	</div>
 		<div class="cards_menu">
 		  <h3>Bouchée de homard croustillant</h3>
 		  <p>Et sa farandole de petits légumes</p>
@@ -67,7 +67,7 @@
 				</label>
 			</div>
 		</div>
-		</div>
+	   </div>
 
 		<div class="plats">
 			<h2>PLATS</h2>
@@ -81,7 +81,7 @@
 						<input type="checkbox" id="checkbox_4"><i class="far fa-check-circle"></i>
 						</label>
 					</div>
-		</div>
+			</div>
 		<div class="cards_menu">
 			<h3>Langouste rôtie</h3>
 			<p>Et ses légumes de saison</p>
@@ -101,42 +101,42 @@
 					<input type="checkbox" id="checkbox_6"><i class="far fa-check-circle"></i>
 					</label>
 				</div>
-		</div>
-		</div>
+			</div>
+			</div>
 
-		<div class="desserts">
-			<h2>DESSERTS</h2>
-			<i class="fa fa-horizontal-rule"></i>
+			<div class="desserts">
+				<h2>DESSERTS</h2>
+				<i class="fa fa-horizontal-rule"></i>
+				<div class="cards_menu">
+					<h3>Farandole de desserts</h3>
+					<p>Du chef</p>
+					<p><strong>18€</strong></p>
+						<div class="chech_circle">
+							<label for="checkbox_7">
+							<input type="checkbox" id="checkbox_7"><i class="far fa-check-circle"></i>
+							</label>
+						</div>
+				</div>
+				<div class="cards_menu">
+					<h3>Crème brûlée</h3>
+						<p>Revisitée</p>
+				<p><strong>22€</strong></p>
+						<div class="chech_circle">
+							<label for="checkbox_8">
+							<input type="checkbox" id="checkbox_8"><i class="far fa-check-circle"></i>
+							</label>
+						</div>
+			</div>
 			<div class="cards_menu">
-				<h3>Farandole de desserts</h3>
-				<p>Du chef</p>
-				<p><strong>18€</strong></p>
+				<h3>Tiramisu</h3>
+				<p>A la noisette</p>
+				<p><strong>23€</strong></p<>
 					<div class="chech_circle">
-						<label for="checkbox_7">
-						<input type="checkbox" id="checkbox_7"><i class="far fa-check-circle"></i>
+						<label for="checkbox_9">
+						<input type="checkbox" id="checkbox_9"><i class="far fa-check-circle"></i>
 						</label>
 					</div>
-		</div>
-		<div class="cards_menu">
-			<h3>Crème brûlée</h3>
-			<p>Revisitée</p>
-			<p><strong>22€</strong></p>
-				<div class="chech_circle">
-					<label for="checkbox_8">
-					<input type="checkbox" id="checkbox_8"><i class="far fa-check-circle"></i>
-					</label>
-				</div>
-		</div>
-		<div class="cards_menu">
-			<h3>Tiramisu</h3>
-			<p>A la noisette</p>
-			<p><strong>23€</strong></p<>
-				<div class="chech_circle">
-					<label for="checkbox_9">
-					<input type="checkbox" id="checkbox_9"><i class="far fa-check-circle"></i>
-					</label>
-				</div>
-		</div>
+			</div>
 		</div>
   	 <button class="command_btn">Commander</button>
 </form>
@@ -148,18 +148,26 @@
 		<h2>ohmyfood</h2>
 			<div class="propose">
 				<ul>
-					<li><a href="#" <i class="fas fa-utensils"></i>
-					<h3>Proposer un restaurant</h3>
-					</a>
+					<li>
+						<a href="#" class="propose_resto">
+						<i class="fas fa-utensils"></i>
+						<h3>Proposer un restaurant</h3>
+						</a>
 					</li>
-					<li><a href="#" <i class="fas fa-hands-helping"></i>
-					<h3>Devenir partenaire</h3>
-					</a>
+					<li>
+						<a href="#" class="partenaire">
+						 <i class="fas fa-hands-helping"></i>
+						<h3>Devenir partenaire</h3>
+						</a>
 					</li>
-					<li><a href="#" <h3>Mentions légales</h3>	
-					</a>
+					<li>
+						<a href="#" class="legale_mentions">
+						<h3>Mentions légales</h3>	
+						</a>
 					</li>
-					<li><a href="#" <h3>Contact</h3>
+					<li>
+						<a href="#" class="contact">
+						<h3>Contact</h3>
 					</a>
 					</li>
 				</ul>
