--- a/index_menu4.html
+++ b/index_menu4.html
@@ -67,8 +67,7 @@
 				</label>
 			</div>
 		</div>
-	   </div>
-
+	   
 		<div class="plats">
 			<h2>PLATS</h2>
 			<i class="fa fa-horizontal-rule"></i>
@@ -130,7 +129,7 @@
 			<div class="cards_menu">
 				<h3>Tiramisu</h3>
 				<p>A la noisette</p>
-				<p><strong>23€</strong></p<>
+				<p><strong>23€</strong></p>
 					<div class="chech_circle">
 						<label for="checkbox_9">
 						<input type="checkbox" id="checkbox_9"><i class="far fa-check-circle"></i>
