--- a/index_menu1.html
+++ b/index_menu1.html
@@ -36,7 +36,7 @@
     
 	<div class="entrees">
      	 <h2>ENTRÉES</h2>
-	    <i class="fa fa-horizontal-rule"></i>
+	    <i class="fa-solid fa-horizontal-rule"></i>
         <div class="cards_menu">
           <h3>Fricassée d'escargots</h3>
           <p>Au piment d'espelette</p>
