--- a/index.html
+++ b/index.html
@@ -21,30 +21,27 @@
 		
 <!-- Logo !-->
 	
-<nav>
 	<a href="#" id="logo">
 		<img src="images/ohmyfood.png" alt="logo Oh My Food">
 	</a>
-</nav>
 	
 <!-- Bannière lieu !-->
 	
 <div class="position">
 	<i class="fas fa-map-marker-alt"></i>
-	<label for="localisation">Paris, Belleville></label>
-	<input style="text" id="localisation" placeholder="Paris, Belleville">
+	<label for="localisation">Paris, Belleville
+		<input style="text" id="localisation" placeholder="Paris, Belleville">
+	</label>
 </div>
 		
 	</header>
 	
 <!-- Elements principaux !-->
-		
-<main>
 	
 <form class="principal_title">
 	<h2>Réservez le menu qui vous convient</h2>
 	<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
-	<button class="explore">Explorer nos restaurants</button>
+	<button type="submit" class="explore">Explorer nos restaurants</button>
 </form>
 
 <!-- Fonctionnement -->
@@ -54,22 +51,24 @@
 		<div class="number_btn">
 			<p>1</p>
 		</div>
-			<button class="btn"><i class="fas fa-mobile-alt"></i>
+			<a class="btn"><i class="fas fa-mobile-alt"></i>
 				Choissisez un restaurant
-			</button>	
+			</a>	
 		<div class="number_btn">
 			<p>2</p>
 		</div>
-			<button class="btn"><i class="fas fa-list-ul"></i>
+			<a class="btn"><i class="fas fa-list-ul"></i>
 				Composez votre menu
-			</button>
+			</a>
 			<div class="number_btn">
 				<p>3</p>
 			</div>
-			<button class="btn"><i class="fas fa-store"></i>
+			<a class="btn"><i class="fas fa-store"></i>
 				Dégustez au restaurant
-			</button>
+			</a>
 	</section>
+	
+<main>
 	
 <!-- Restaurants !-->
 	
@@ -115,7 +114,7 @@
 			</div>
 	</div>
 </section>
-			
+			</main>
 <!-- Footer !-->
 		
 <footer>
@@ -149,7 +148,7 @@
 			</div>
 	</div>
 </footer>
-</main>
+
 </body>
 
 </html>
