--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 		<h1>Restaurants</h1>
 
-			<div class="cards_choice_all">
+			<nav class="cards_choice_all">
 				<a class="card_choice" href="index_menu1.html">
 					<div class="new">
 						<p>Nouveau</p>
@@ -138,7 +138,7 @@
 							<i class="far fa-heart"></i>
 						</div>
 				</a>
-			</div>
+			</nav>
 </article>
 			
 </main>
