--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		
 <!-- Logo !-->
 	
-	<a href="#" id="logo">
-		<img src="images/ohmyfood.png" alt="logo Oh My Food">
+	<a href="#">
+		<img id="logo"src="images/ohmyfood.png" alt="logo Oh My Food">
 	</a>
 	
 <!-- Bannière lieu !-->
