--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 	
 <div class="position">
 	<i class="fas fa-map-marker-alt"></i>
-	<label for="localisation">Paris, Belleville
+	<label for="localisation">Paris, Belleville</label>
 		<input style="text" id="localisation" placeholder="Paris, Belleville">
-	</label>
 </div>
 
 <!-- Titre et exploration !-->
