--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 
 <!-- Titre et exploration !-->
 	
-<form class="principal_title">
-	<h2>Réservez le menu qui vous convient</h2>
-	<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
+<form>
+	<div class="principal_title">
+		<h2>Réservez le menu qui vous convient</h2>
+		<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
+	</div>
 	<button type="submit" class="explore">Explorer nos restaurants</button>
 </form>
 
