--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@
 		<img id="logo"src="images/ohmyfood.png" alt="logo Oh My Food">
 	</a>
 	
-<!-- Bannière lieu !-->
-	
-<div class="position">
-	<i class="fas fa-map-marker-alt"></i>
-	<label for="localisation">Paris, Belleville</label>
-		<input style="text" id="localisation" placeholder="Paris, Belleville">
-</div>
-
-<!-- Titre et exploration !-->
-	
+<!-- Bannière lieu  et exploration !-->
 <form>
+
+	<div class="position">
+		<i class="fas fa-map-marker-alt"></i>
+		<label for="localisation">Paris, Belleville</label>
+		<input style="text" id="localisation" placeholder="Paris, Belleville">
+	</div>
 	<div class="principal_title">
 		<h2>Réservez le menu qui vous convient</h2>
 		<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
 		<button type="submit" class="explore">Explorer nos restaurants</button>
+	</div>
 </form>
 
 <!-- Fonctionnement -->
