--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 			<div class="number_btn">
 				<p>1</p>
 			</div>
-				<div class="btn">
+				<div class="all_btn">
+					<div class="btn">
 					<a>
 						<i class="fas fa-mobile-alt"></i>
 						Choissisez un restaurant
@@ -68,6 +69,7 @@
 					Dégustez au restaurant
 					</a>
 				</div>
+			</div>
 	</section>
 
 </header>
