--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="number_btn">
 					<p>1</p>
 				</div>
-				<div class="btn">
+				<div class="choose">
 					<a>
 					<i class="fas fa-mobile-alt"></i>
 						Choissisez un restaurant
@@ -56,7 +56,7 @@
 				<div class="number_btn">
 					<p>2</p>
 				</div>
-				<div class="btn">
+				<div class="compose">
 					<a class="btn"><i class="fas fa-list-ul"></i>
 						Composez votre menu
 					</a>
@@ -64,7 +64,7 @@
 				<div class="number_btn">
 					<p>3</p>
 				</div>
-				<div class="btn">
+				<div class="deguste">
 					<a class="btn"><i class="fas fa-store"></i>
 					Dégustez au restaurant
 					</a>
