--- a/index.html
+++ b/index.html
@@ -43,17 +43,16 @@
 
 	<section class="explain">
 		<h2>Fonctionnement</h2>
-			<div class="all_btn">
 				<div class="number_btn">
 					<p>1</p>
 				</div>
-				<div class="choose">
+				<div class="btn">
 					<a>
 					<i class="fas fa-mobile-alt"></i>
 						Choissisez un restaurant
 				</a>
 				</div>	
-				<div class="number_btn">
+				<div class="btn">
 					<p>2</p>
 				</div>
 				<div class="compose">
@@ -64,12 +63,11 @@
 				<div class="number_btn">
 					<p>3</p>
 				</div>
-				<div class="deguste">
+				<div class="btn">
 					<a class="btn"><i class="fas fa-store"></i>
 					Dégustez au restaurant
 					</a>
 				</div>
-			</div>
 	</section>
 
 </header>
