--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
 				</div>
 				<div class="btn">
 					<a>
-					<i class="fas fa-mobile-alt"></i>
+						<i class="fas fa-mobile-alt"></i>
 						Choissisez un restaurant
-				</a>
+					</a>
 				</div>	
-				<div class="btn">
+				<div class="number_btn">
 					<p>2</p>
 				</div>
-				<div class="compose">
-					<a class="btn"><i class="fas fa-list-ul"></i>
+				<div class="btn">
+					<a>
+						<i class="fas fa-list-ul"></i>
 						Composez votre menu
 					</a>
 				</div>
@@ -64,8 +65,9 @@
 					<p>3</p>
 				</div>
 				<div class="btn">
-					<a class="btn"><i class="fas fa-store"></i>
-					Dégustez au restaurant
+					<a>
+						<i class="fas fa-store"></i>
+						Dégustez au restaurant
 					</a>
 				</div>
 	</section>
