update id menus

--- a/index_menu1.html
+++ b/index_menu1.html
@@ -16,7 +16,7 @@
 <!-- Logo !-->
     
 <header>  
-	<a href="index.html" id="logo">
+	<a href="index.html" id="logo_menu">
         <i class="fa fa-arrow-left"></i>
   	</a>
 	<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
