--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<p class="new">Nouveau</p>
 					<img src="images/palettedugout.jpg" alt="photo d'un plat">
 					<h3>La palette du goût</h3>
-					<p>Ménilmontant</p>
+					<p class="site">Ménilmontant</p>
 					<i class="far fa-heart"></i>	
 				</a>
 				</div>
@@ -96,7 +96,7 @@
 					<p class="new">Nouveau</p>
 					<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 					<h3>La note enchantée</h3>
-					<p>Charonne</p>
+					<p class="site">Charonne</p>
 					<i class="far fa-heart"></i>
 				</a>
 				</div>
@@ -104,7 +104,7 @@
 				<div class="card_choice">
 					<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 					<h3>A la française</h3>
-					<p>Cité Rouge</p>
+					<p class="site">Cité Rouge</p>
 					<i class="far fa-heart"></i>
 				</a> 
 				</div>  
@@ -112,7 +112,7 @@
 				<div class="card_choice">
 					<img src="images/delicedessens.jpg" alt="photo d'un plat">
 					<h3>Le délice des sens</h3>
-					<p>Folie-Méricourt</p>
+					<p class="site">Folie-Méricourt</p>
 					<i class="far fa-heart"></i>
 				</a>
 				</div>
