--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 					<img src="images/palettedugout.jpg" alt="photo d'un plat">
 					<h3>La palette du goût</h3>
 					<p class="site">Ménilmontant</p>
-					<i class="far fa-heart"></i>	
+					<div class="heart">
+						<i class="far fa-heart"></i>
+					</div>	
 				</a>
 				</div>
 				
@@ -97,7 +99,9 @@
 					<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 					<h3>La note enchantée</h3>
 					<p class="site">Charonne</p>
-					<i class="far fa-heart"></i>
+					<div class="heart">
+						<i class="far fa-heart"></i>
+					</div>
 				</a>
 				</div>
 				<a href="index_menu3.html">
@@ -105,7 +109,9 @@
 					<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 					<h3>A la française</h3>
 					<p class="site">Cité Rouge</p>
-					<i class="far fa-heart"></i>
+					<div class="heart">
+						<i class="far fa-heart"></i>
+					</div>
 				</a> 
 				</div>  
 				<a href="index_menu4.html">
@@ -113,7 +119,9 @@
 					<img src="images/delicedessens.jpg" alt="photo d'un plat">
 					<h3>Le délice des sens</h3>
 					<p class="site">Folie-Méricourt</p>
-					<i class="far fa-heart"></i>
+					<div class="heart">
+						<i class="far fa-heart"></i>
+					</div>
 				</a>
 				</div>
 			</nav>
