updt html & css

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <footer>
 	<div class="footer">
 		<h3>ohmyfood</h3>
-			<div class="propose">
+			<div class="links">
 				<ul>
 					<li>
 						<a href="#" class="propose_resto">
