--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		
 <footer>
 	<div class="footer">
-		<h3>ohmyfood</h3>
+		<h3 class="logo-footer">ohmyfood</h3>
 			<div class="links">
 				<ul>
 					<li>
