--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- Fonctionnement -->
 
 	<section class="explain">
-		<h2>Fonctionnement</h2>
+		<h2 class="title">Fonctionnement</h2>
 			<div class="btn">
 				<div class="number_btn">
 					<p>1</p>
@@ -137,26 +137,26 @@
 		<h3 class="logo-footer">ohmyfood</h3>
 			<div class="links">
 				<ul>
-					<li>
-						<i class="fas fa-utensils"></i>
-						<a href="#" class="propose_resto">
-							<h3>Proposer un restaurant</h3>
+					<li>	
+						<a href="#">
+							<i class="fas fa-utensils"></i>
+							Proposer un restaurant
+						</a>
+					</li>
+					<li>	
+						<a href="#"> 
+							<i class="fas fa-hands-helping"></i>
+							Devenir partenaire
 						</a>
 					</li>
 					<li>
-						<i class="fas fa-hands-helping"></i>
-						<a href="#" class="partenaire"> 
-							<h3>Devenir partenaire</h3>
+						<a href="#">
+							Mentions légales
 						</a>
 					</li>
 					<li>
-						<a href="#" class="legale_mentions">
-							<h3>Mentions légales</h3>	
-						</a>
-					</li>
-					<li>
-						<a href="#" class="contact">
-							<h3>Contact</h3>
+						<a href="#">
+							Contact
 						</a>
 					</li>
 				</ul>
