--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <article>	
 			<nav id="restaurants"> 
 				<h1>Restaurants</h1>	
-					<div class="cards_choice_all">
+					<div class="cards_choice-1">
 						<a  href="index_menu1.html">
 							<div class="card_choice">
 								<p class="new">Nouveau</p>
@@ -100,6 +100,8 @@
 							<i class="far fa-heart"></i>
 						</div>
 						</a>
+					</div>
+					<div class="cards_choice-2">
 						<a href="index_menu3.html">
 						<div class="card_choice">
 							<img src="images/alafrancaise.jpg" alt="photo d'un plat">
