--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 	
 <article>	
 			<nav id="restaurants"> 
-				<h1>Restaurants</h1>	
+				<h1>Restaurants</h1>
+				<div class="all_cards">	
 					<div class="cards_choice-1">
 						<a  href="index_menu1.html">
 							<div class="card_choice">
@@ -119,6 +120,7 @@
 						</div>
 						</a>
 					</div>
+				</div>
 			</nav>
 </article>
 			
