--- a/index.html
+++ b/index.html
@@ -42,34 +42,24 @@
 <!-- Fonctionnement -->
 
 	<section class="explain">
-		<h2 class="title">Fonctionnement</h2>
-			<div class="btn">
-				<div class="number_btn">
-					<p>1</p>
+		<div class="card_functioning">
+			<h2>Fonctionnement</h2>
+				<div class="btn">
+					<p class="number_btn">1</p>
+					<i class="fas fa-mobile-alt"></i>
+					<p>Choissisez un restaurant</p>
 				</div>
-					<a>
-						<i class="fas fa-mobile-alt"></i>
-						Choissisez un restaurant
-					</a>
-			</div>
-			<div class="btn">
-				<div class="number_btn">
-					<p>2</p>
+				<div class="btn">
+					<p class="number_btn">2</p>
+					<i class="fas fa-list-ul"></i>
+					<p>Composez votre menu</p>
+				</div>		
+				<div class="btn">
+					<p class="number_btn">3</p>
+					<i class="fas fa-store"></i>
+					<p>Dégustez au restaurant</p>
 				</div>
-					<a>
-						<i class="fas fa-list-ul"></i>
-						Composez votre menu
-					</a>
-			</div>		
-			<div class="btn">
-				<div class="number_btn">
-					<p>3</p>
-				</div>
-					<a>
-						<i class="fas fa-store"></i>
-						Dégustez au restaurant
-					</a>
-			</div>
+		</div>		
 	</section>
 
 </header>
