--- a/index.html
+++ b/index.html
@@ -45,19 +45,24 @@
 		<h2>Fonctionnement</h2>
 		<div class="card_functioning">	
 				<div class="btn">
-					<p class="number_btn">1</p>
-					<i class="fas fa-mobile-alt"></i>
-					<p>Choissisez un restaurant</p>
-				</div>
+					<div class="number_btn">
+						<p>1</p>
+						<i class="fas fa-mobile-alt"></i>
+						<p>Choissisez un restaurant</p>
+					</div>
 				<div class="btn">
-					<p class="number_btn">2</p>
-					<i class="fas fa-list-ul"></i>
-					<p>Composez votre menu</p>
+					<div class="number_btn">
+						<p>2</p>
+						<i class="fas fa-list-ul"></i>
+						<p>Composez votre menu</p>
+					</div>
 				</div>		
 				<div class="btn">
-					<p class="number_btn">3</p>
-					<i class="fas fa-store"></i>
-					<p>Dégustez au restaurant</p>
+					<div class="number_btn">
+						<p>3</p>
+						<i class="fas fa-store"></i>
+						<p>Dégustez au restaurant</p>
+					</div>
 				</div>
 		</div>		
 	</section>
