--- a/index.html
+++ b/index.html
@@ -74,47 +74,45 @@
 	
 <!-- Restaurants !-->
 	
-<article>	
-		<nav id="restaurants"> 
-			<h1>Restaurants</h1>
+<section id="restaurants">	
+		<h1>Restaurants</h1>
 			<div class="all_cards">	
 				<a  href="index_menu1.html">
-					<div class="card_choice">
+					<article class="card_choice">
 						<p class="new">Nouveau</p>
 						<img src="images/palettedugout.jpg" alt="photo d'un plat">
 						<h3>La palette du goût</h3>
 						<p class="site">Ménilmontant</p>
 						<i class="far fa-heart"></i>
-					</div>
+					</article>
 				</a>	
 				<a href="index_menu2.html">
-					<div class="card_choice">
+					<article class="card_choice">
 						<p class="new">Nouveau</p>
 						<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 						<h3>La note enchantée</h3>
 						<p class="site">Charonne</p>
 						<i class="far fa-heart"></i>
-					</div>
+					</article>
 				</a>
 				<a href="index_menu3.html">
-					<div class="card_choice">
+					<article class="card_choice">
 						<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 						<h3>A la française</h3>
 						<p class="site">Cité Rouge</p>
 						<i class="far fa-heart"></i>
-					</div>
+					</article>
 				</a>
 				<a href="index_menu4.html">
-					<div class="card_choice">
+					<article class="card_choice">
 						<img src="images/delicedessens.jpg" alt="photo d'un plat">
 						<h3>Le délice des sens</h3>
 						<p class="site">Folie-Méricourt</p>
 						<i class="far fa-heart"></i>
-					</div>
+					</article>
 				</a>
 			</div>
-		</nav>
-</article>
+</section>
 			
 </main>
 
