--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
 <!-- Restaurants !-->
 	
 <section id="restaurants">	
+	<div class="title">
 		<h2>Restaurants</h2>
+	</div>
 			<div class="all_cards">	
-
 				<article class="card_choice">	
 					<a  href="index_menu1.html">
 						<p class="new">Nouveau</p>
