--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
 		
 <footer>
 	<div class="footer">
-		<h3 class="logo-footer">ohmyfood</h3>
+		<a href="#">
+			<h3>class="logo-footer">ohmyfood</h3>
+		</a> 
 			<div class="links">
 				<ul>
 					<li>	
