--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <footer>
 	<div class="footer">
 		<a href="#">
-			<h3>class="logo-footer">ohmyfood</h3>
+			<h3 class="logo-footer">ohmyfood</h3>
 		</a> 
 			<div class="links">
 				<ul>
