--- a/accueil.html
+++ b/accueil.html
@@ -78,7 +78,7 @@
 		<h2>Restaurants</h2>
 			<div class="all_cards">	
 				<article class="card_choice">	
-					<a  href="index_menu1.html">
+					<a  href="lapalettedugout.html">
 						<p class="new">Nouveau</p>
 						<img src="images/palettedugout.jpg" alt="photo d'un plat">
 						<h3>La palette du goût</h3>
@@ -90,7 +90,7 @@
 				</article>
 
 				<article class="card_choice">
-						<a href="index_menu2.html">
+						<a href="lanoteenchantee.html">
 							<p class="new">Nouveau</p>
 							<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 							<h3>La note enchantée</h3>
@@ -102,7 +102,7 @@
 					</article>
 
 					<article class="card_choice">
-						<a href="index_menu3.html">
+						<a href="a_lafrancaise.html">
 							<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 							<h3>A la française</h3>
 							<p class="site">Cité Rouge</p>	
@@ -113,7 +113,7 @@
 					</article>
 
 					<article class="card_choice">
-						<a href="index_menu4.html">
+						<a href="ledelicedessens.html">
 							<img src="images/delicedessens.jpg" alt="photo d'un plat">
 							<h3>Le délice des sens</h3>
 							<p class="site">Folie-Méricourt</p>
