--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -16,11 +16,13 @@
 <!-- Logo !-->
     
 <header>  
-	<a href="index.html" id="logo">
-        <i class="fa fa-arrow-left"></i>
-  	</a>
-	<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
-	</a>	  
+	<nav class="header-2">
+		<a href="index.html" id="logo">
+       	 <i class="fa fa-arrow-left"></i>
+  		</a>
+		<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
+		</a>	
+	</nav>
 </header>
     
 <main>
